lecture notes 2024-12-12